<resources>
    <string name="app_name">Sabailai</string>
    <string name="title_activity_customer_dash_board">CustomerDashBoard</string>
    <string name="title_customer_home">Home</string>
    <string name="title_customer_dashboard">Booking</string>
    <string name="title_customer_notifications">Wallet</string>
    <string name="title_customer_profile">Profile</string>


    <string name="default_notification_channel_id">in.co.sabailai</string>
    <string name="title_activity_technician_dash_board">TechnicianDashBoard</string>
    <string name="title_technician_ongoing">ON GOING</string>
    <string name="title_technician_upcoming">UPCOMING</string>
    <string name="title_technician_wallet">WALLET</string>
    <string name="title_technician_history">HISTORY</string>
    <string name="title_technician_profile">PROFILE</string>
    <string name="google_maps_key">AIzaSyBnl5-ZvEzF_lnJ0L7-tVcKRB8iFJ0Uyec</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
