<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="in.co.sabailai.customer.fragments.HomeFragment"
        android:label="@string/title_customer_home"
        tools:layout="@layout/fragment_customer_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="in.co.sabailai.customer.fragments.BookingsFragment"
        android:label="@string/title_customer_dashboard"
        tools:layout="@layout/fragment_customer_bookings" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="in.co.sabailai.customer.fragments.WalletFragment"
        android:label="@string/title_customer_notifications"
        tools:layout="@layout/fragment_customer_wallet" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="in.co.sabailai.customer.fragments.ProfileFragment"
        android:label="@string/title_customer_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
